feat: hook up i18n to global exceptions